--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
+    "react-modern-drawer": "^0.1.1",
     "react-parallax-tilt": "^1.5.44",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
