--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "firebase": "^8.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modern-drawer": "^0.1.1",
     "react-parallax-tilt": "^1.5.44",
     "react-redux": "^7.2.4",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.4.6",
+    "react-tabs": "^3.2.2",
     "redux": "^4.1.0",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
